fix Art in Feature Boxes Too Wide #2077

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -3795,6 +3795,7 @@ subfigure {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   padding: 0;
+  box-sizing: border-box;
 }
 .chapter .example::before {
   display: table-caption;
@@ -3838,6 +3839,9 @@ subfigure {
 }
 .chapter .example > div.body p:first-child {
   margin-top: 0;
+}
+.chapter .example > div.body .figure img {
+  max-width: 6in;
 }
 .example > .title {
   display: block;
@@ -4974,6 +4978,7 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   padding: 0;
+  box-sizing: border-box;
 }
 .chapter .note.link-to-learning::before {
   display: table-caption;
@@ -5018,6 +5023,9 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
 .chapter .note.link-to-learning > div.body p:first-child {
   margin-top: 0;
 }
+.chapter .note.link-to-learning > div.body .figure img {
+  max-width: 6in;
+}
 .chapter .note.link-to-learning div.mediaobject {
   display: none;
 }
@@ -5036,6 +5044,7 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   padding: 0;
+  box-sizing: border-box;
 }
 .chapter .note.making-connections::before {
   display: table-caption;
@@ -5080,6 +5089,9 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
 .chapter .note.making-connections > div.body p:first-child {
   margin-top: 0;
 }
+.chapter .note.making-connections > div.body .figure img {
+  max-width: 6in;
+}
 .chapter .note.making-connections div.title {
   margin-top: 15px;
 }
@@ -5098,6 +5110,7 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   padding: 0;
+  box-sizing: border-box;
 }
 .chapter .note.voyagers-in-astronomy::before {
   display: table-caption;
@@ -5142,6 +5155,9 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
 .chapter .note.voyagers-in-astronomy > div.body p:first-child {
   margin-top: 0;
 }
+.chapter .note.voyagers-in-astronomy > div.body .figure img {
+  max-width: 6in;
+}
 .chapter .note.voyagers-in-astronomy div.title {
   margin-top: 15px;
   color: #2F7E9E;
@@ -5161,6 +5177,7 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   padding: 0;
+  box-sizing: border-box;
 }
 .chapter .note.astronomy-basics::before {
   display: table-caption;
@@ -5205,6 +5222,9 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
 .chapter .note.astronomy-basics > div.body p:first-child {
   margin-top: 0;
 }
+.chapter .note.astronomy-basics > div.body .figure img {
+  max-width: 6in;
+}
 .chapter .note.astronomy-basics div.title {
   margin-top: 15px;
   color: #2F7E9E;
@@ -5224,6 +5244,7 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   padding: 0;
+  box-sizing: border-box;
 }
 .chapter .note.seeing-for-yourself::before {
   display: table-caption;
@@ -5267,6 +5288,9 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
 }
 .chapter .note.seeing-for-yourself > div.body p:first-child {
   margin-top: 0;
+}
+.chapter .note.seeing-for-yourself > div.body .figure img {
+  max-width: 6in;
 }
 .chapter .note.seeing-for-yourself div.title {
   margin-top: 15px;
