--- a/css/refactor/astronomy-slots.less
+++ b/css/refactor/astronomy-slots.less
@@ -29,6 +29,7 @@
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   padding: 0;
+  box-sizing: border-box;
 
   &::before {
     display: table-caption;
@@ -76,6 +77,10 @@
 
     p:first-child {
       margin-top: 0;
+    }
+
+    .figure img {
+      max-width: 6in;
     }
   }
 }
